----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-05-22 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_indexes.php3, libraries/common.lib.php3: Better tabs highlighting
      when editing indexes.
    * tbl_replace_fields.php3, libraries/build_dump.lib.php3,
      libraries/display_tbl.lib.php3: Don't hexify BLOB if it is empty (bug
      #741599).

2003-05-22 Garvin Hicking <me@supergarv.de>
    * sql.php3, libraries/common.lib.php3: Bug #692854: Never execute
      a query in (with/without) PHP code views, and display a new
      "Execute query" link in this mode.
    * lang/german*: Update.

2003-05-20 Garvin Hicking <me@supergarv.de>
    * index.php3: New rewrite of how the frameset is created
      (Patch item #738226 plus some <noframes> corrections).
      This fixes compatibility problems, even though it's not
      valid XHTML 1.0, because the <script>/<noscript> tags are
      not allowed in there.

2003-05-20 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/korean update, thanks to WooSuhan
    * lang/estonian update, thanks to finsoft@sourceforge.net.
    * lang/norwegian: Updated, thanks to Sven-Erik Andersen (sven-erik).
    * lang/indonesian: Updated, thanks to Rachim Tamsjadi (tamsy).
    * lang/slovak update, thanks to Lubos Klokner

2003-05-20 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_change.php3: Fixed table layout when LongtextDoubleTextarea is
      false.
    * tbl_select.php3: Fixed problems with empty value in enum (bug #740420).
    
2003-05-18 Marc Delisle  <lem9@users.sourceforge.net>
    * left.php3, index.php3: bug 739348: because the db name is no longer
      encoded in left.php3 (to accomodate html entities), we have to stop
      decoding it, otherwise a db name with a plus sign is not selectable
    * sql.php3: bug 738508: do a quick count on the rows to avoid
      a slow SQL_CALC_FOUND_ROWS, when "just browsing" (experimental)
