@@ -11,6 +11,9 @@ $Source$
     * tbl_replace_fields.php3, libraries/build_dump.lib.php3,
       libraries/display_tbl.lib.php3: Don't hexify BLOB if it is empty (bug
       #741599).
+    * Documentation, config.inc.php3, libraries/config_import.lib.php3,
+      libraries/defines_php.lib.php3: Improved GD 2 detection (bugs #736111,
+      #741192).
 
 2003-05-22 Garvin Hicking <me@supergarv.de>
     * sql.php3, libraries/common.lib.php3: Bug #692854: Never execute
